unpackaged/main/default/objects/MW_ApplicationTagSetup__mdt/MW_ApplicationTagSetup__mdt.object-meta.xml
<CustomObject>
    <label>MW_ApplicationTagSetup</label>
    <pluralLabel>MW_ApplicationTagSetups</pluralLabel>
</CustomObject>