unpackaged/main/default/objects/MW_ApplicationTagSetup__mdt/fields/Add_Tags__c.field-meta.xml
<CustomField>
    <fullName>Add_Tags__c</fullName>
    <label>Add Tags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>