unpackaged/main/default/objects/MW_ApplicationTagSetup__mdt/fields/Delete_Tags__c.field-meta.xml
<CustomField>
    <fullName>Delete_Tags__c</fullName>
    <label>Delete Tags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>