unpackaged/main/default/objects/MW_ApplicationTagSetup__mdt/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <label>Profile Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>